# AVROS

./: .gitignore  CLAUDE.md  avros.repos  requirements.txt
docs/: nav2_bringup_troubleshooting.tex  nav2_testing_troubleshooting.tex  realsense_d455_setup.tex  xsens_mt_manager_setup.md
scripts/: deploy.sh
src/avros_bringup/: package.xml  setup.cfg  setup.py
src/avros_bringup/config/: actuator_params.yaml  cyclonedds.xml  ekf.yaml  nav2_params.yaml  nav2_params_humble.yaml  navigate_route_graph.xml  navigate_route_graph_humble.xml  navsat.yaml  ntrip_params.yaml  perception_params.yaml  realsense.yaml  rtabmap.yaml  velodyne.yaml  webui_params.yaml  xsens.yaml  zed_back.yaml  zed_left.yaml  zed_right.yaml
src/avros_bringup/launch/: actuator.launch.py  costmap_test.launch.py  localization.launch.py  navigation.launch.py  perception.launch.py  sensors.launch.py  slam_navigation.launch.py  teleop.launch.py  webui.launch.py
src/avros_bringup/rviz/: avros.rviz  costmap_test.rviz
src/avros_bringup/urdf/: avros.urdf.xacro
src/avros_control/: package.xml  setup.cfg  setup.py
src/avros_control/avros_control/: actuator_node.py
src/avros_msgs/: CMakeLists.txt  package.xml
src/avros_msgs/msg/: ActuatorCommand.msg  ActuatorState.msg
src/avros_msgs/srv/: PlanRoute.srv
src/avros_navigation/: package.xml  setup.cfg  setup.py
src/avros_navigation/avros_navigation/: route_planner_node.py
src/avros_perception/: README.md  package.xml  setup.py
src/avros_perception/avros_perception/: depth_projection_node.py  segformer_node.py
src/avros_sim/: package.xml  setup.cfg  setup.py
src/avros_sim/avros_sim/: avros_vehicle_driver.py
src/avros_sim/launch/: sim.launch.py  sim_navigation.launch.py  sim_teleop.launch.py
src/avros_sim/resource/: avros_webots.urdf
src/avros_sim/worlds/: cpp_campus.osm  cpp_campus.wbt  osm_config.ini  run_osm_import.sh
src/avros_webui/: package.xml  setup.cfg  setup.py
(+3 files in other folders)
